bugfix: made it runable with CUDA on GPU

--- a/semisupervised_gan.ipynb
+++ b/semisupervised_gan.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,8 +66,6 @@
     "        if self._is_train_dataset():\n",
     "            label_mask = torch.zeros(len(self.svhn_dataset)).float()\n",
     "            label_mask[0:1000] = 1\n",
-    "            if self.use_gpu:\n",
-    "                label_mask = label_mask.cuda()\n",
     "            return label_mask\n",
     "        return None\n",
     "\n",
@@ -133,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,15 +320,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Solver"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +398,9 @@
     "\n",
     "    def _one_hot(self, x):\n",
     "        ones = torch.sparse.torch.eye(self.num_classes)\n",
-    "        one_hot = ones.index_select(0, x.data)\n",
+    "        one_hot = ones.index_select(0, x.data.cpu())\n",
+    "        if self.use_gpu:\n",
+    "            one_hot = one_hot.cuda()\n",
     "        return Variable(one_hot)\n",
     "\n",
     "    def train(self):\n",
@@ -504,10 +497,10 @@
     "\n",
     "                total_count_samples += len(svhn_labels)\n",
     "                loop_count += 1\n",
-    "                if loop_count%10 == 0:\n",
-    "                    print('Training:\\tepoch {}/{}\\tdiscr. gan loss {}\\tdiscr. class loss {}\\tgen loss {}\\tsamples {}/{}'.\n",
-    "                            format(epoch, self.epochs, d_gan_loss.data[0], d_class_loss.data[0], g_loss.data[0], \n",
-    "                                total_count_samples, len(self.svhn_loader_train)))\n",
+    "                # if loop_count%10 == 0:\n",
+    "                #    print('Training:\\tepoch {}/{}\\tdiscr. gan loss {}\\tdiscr. class loss {}\\tgen loss {}\\tsamples {}/{}'.\n",
+    "                #            format(epoch, self.epochs, d_gan_loss.data[0], d_class_loss.data[0], g_loss.data[0], \n",
+    "                #                total_count_samples, len(self.svhn_loader_train)))\n",
     "                    \n",
     "            accuracy = masked_correct.data[0]/max(1.0, num_samples.data[0])\n",
     "            print('Training:\\tepoch {}/{}\\taccuracy {}'.format(epoch, self.epochs, accuracy))\n",
@@ -520,22 +513,22 @@
     "                # load svhn dataset\n",
     "                svhn_data, svhn_labels = data\n",
     "                svhn_data = self._to_var(svhn_data)\n",
-    "                svhn_labels = svhn_labels.long().squeeze()\n",
+    "                svhn_labels = self._to_var(svhn_labels).long().squeeze()\n",
     "\n",
     "                # -------------- train discriminator --------------\n",
     "\n",
     "                # train with real images\n",
     "                d_out, _, _, _ = self.discriminator(svhn_data)\n",
     "                _, pred_idx = torch.max(d_out.data, 1)\n",
-    "                eq = torch.eq(svhn_labels, pred_idx)\n",
+    "                eq = torch.eq(svhn_labels.data, pred_idx)\n",
     "                correct += torch.sum(eq.float())\n",
     "                num_samples += len(svhn_labels)\n",
     "                \n",
     "                total_count_samples += len(svhn_labels)\n",
     "                loop_count += 1\n",
-    "                if loop_count%10 == 0:\n",
-    "                    print('Test:\\tepoch {}/{}\\tsamples {}/{}'.format(\n",
-    "                        epoch, self.epochs, total_count_samples, len(self.svhn_loader_test)))\n",
+    "                # if loop_count%10 == 0:\n",
+    "                #    print('Test:\\tepoch {}/{}\\tsamples {}/{}'.format(\n",
+    "                #        epoch, self.epochs, total_count_samples, len(self.svhn_loader_test)))\n",
     "                \n",
     "            accuracy = correct/max(1.0, 1.0 * num_samples)\n",
     "            print('Test:\\tepoch {}/{}\\taccuracy {}'.format(epoch, self.epochs, accuracy))\n",
@@ -547,12 +540,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Solver"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Main"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -581,12 +581,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1145\n",
+      "Training:\tepoch 1/25\taccuracy 0.096\n",
+      "Test:\tepoch 1/25\taccuracy 0.08428088506453596\n",
+      "Training:\tepoch 2/25\taccuracy 0.064\n",
+      "Test:\tepoch 2/25\taccuracy 0.10517824216349109\n",
+      "Training:\tepoch 3/25\taccuracy 0.066\n",
+      "Test:\tepoch 3/25\taccuracy 0.10003073140749846\n",
+      "Training:\tepoch 4/25\taccuracy 0.064\n",
+      "Test:\tepoch 4/25\taccuracy 0.0806699446834665\n",
+      "Training:\tepoch 5/25\taccuracy 0.063\n",
+      "Test:\tepoch 5/25\taccuracy 0.11086355255070682\n",
+      "Training:\tepoch 6/25\taccuracy 0.064\n",
+      "Test:\tepoch 6/25\taccuracy 0.11140135218192994\n",
+      "Training:\tepoch 7/25\taccuracy 0.062\n",
+      "Test:\tepoch 7/25\taccuracy 0.10337277197295636\n",
+      "Training:\tepoch 8/25\taccuracy 0.065\n",
+      "Test:\tepoch 8/25\taccuracy 0.107559926244622\n",
+      "Training:\tepoch 9/25\taccuracy 0.066\n",
+      "Test:\tepoch 9/25\taccuracy 0.11328365089121081\n",
+      "Training:\tepoch 10/25\taccuracy 0.062\n",
+      "Test:\tepoch 10/25\taccuracy 0.14393822987092808\n",
+      "Training:\tepoch 11/25\taccuracy 0.066\n",
+      "Test:\tepoch 11/25\taccuracy 0.1840043023970498\n",
+      "Training:\tepoch 12/25\taccuracy 0.065\n",
+      "Test:\tepoch 12/25\taccuracy 0.18984326982175784\n",
+      "Training:\tepoch 13/25\taccuracy 0.062\n",
+      "Test:\tepoch 13/25\taccuracy 0.21354486785494775\n",
+      "Training:\tepoch 14/25\taccuracy 0.064\n",
+      "Test:\tepoch 14/25\taccuracy 0.27604486785494775\n",
+      "Training:\tepoch 15/25\taccuracy 0.067\n",
+      "Test:\tepoch 15/25\taccuracy 0.2889136447449293\n",
+      "Training:\tepoch 16/25\taccuracy 0.072\n",
+      "Test:\tepoch 16/25\taccuracy 0.3519898586355255\n",
+      "Training:\tepoch 17/25\taccuracy 0.069\n",
+      "Test:\tepoch 17/25\taccuracy 0.3711585740626921\n",
+      "Training:\tepoch 18/25\taccuracy 0.074\n",
+      "Test:\tepoch 18/25\taccuracy 0.3806084818684696\n",
+      "Training:\tepoch 19/25\taccuracy 0.084\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Process Process-9:\n",
+      "Process Process-47:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/lib/python3.5/multiprocessing/process.py\", line 249, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/usr/lib/python3.5/multiprocessing/process.py\", line 93, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/usr/local/lib/python3.5/dist-packages/torch/utils/data/dataloader.py\", line 36, in _worker_loop\n",
+      "    r = index_queue.get()\n",
+      "  File \"/usr/lib/python3.5/multiprocessing/queues.py\", line 343, in get\n",
+      "    res = self._reader.recv_bytes()\n",
+      "  File \"/usr/lib/python3.5/multiprocessing/connection.py\", line 216, in recv_bytes\n",
+      "    buf = self._recv_bytes(maxlength)\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/local/lib/python3.5/dist-packages/torch/utils/data/dataloader.py\", line 42, in <listcomp>\n",
+      "    samples = collate_fn([dataset[i] for i in batch_indices])\n",
+      "  File \"/usr/lib/python3.5/multiprocessing/process.py\", line 249, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/usr/lib/python3.5/multiprocessing/process.py\", line 93, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/usr/local/lib/python3.5/dist-packages/torch/utils/data/dataloader.py\", line 42, in _worker_loop\n",
+      "    samples = collate_fn([dataset[i] for i in batch_indices])\n",
+      "  File \"<ipython-input-2-ec16e050f298>\", line 33, in __getitem__\n",
+      "    data, label = self.svhn_dataset.__getitem__(idx)\n",
+      "  File \"/usr/local/lib/python3.5/dist-packages/torchvision/datasets/svhn.py\", line 99, in __getitem__\n",
+      "    img = self.transform(img)\n",
+      "KeyboardInterrupt\n",
+      "  File \"/usr/local/lib/python3.5/dist-packages/torchvision/transforms/transforms.py\", line 42, in __call__\n",
+      "    img = t(img)\n",
+      "  File \"/usr/local/lib/python3.5/dist-packages/torchvision/transforms/transforms.py\", line 61, in __call__\n",
+      "    return F.to_tensor(pic)\n",
+      "  File \"/usr/local/lib/python3.5/dist-packages/torchvision/transforms/functional.py\", line 74, in to_tensor\n",
+      "    img = img.transpose(0, 1).transpose(0, 2).contiguous()\n",
+      "  File \"/usr/lib/python3.5/multiprocessing/connection.py\", line 407, in _recv_bytes\n",
+      "    buf = self._recv(4)\n",
+      "  File \"/usr/lib/python3.5/multiprocessing/connection.py\", line 379, in _recv\n",
+      "    chunk = read(handle, remaining)\n",
+      "KeyboardInterrupt\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-22-ad90b845b08b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msolver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-19-ea01c0d90046>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    183\u001b[0m             \u001b[0mnum_samples\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    184\u001b[0m             \u001b[0mloop_count\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 185\u001b[0;31m             \u001b[0;32mfor\u001b[0m \u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msvhn_loader_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    186\u001b[0m                 \u001b[0;31m# load svhn dataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    187\u001b[0m                 \u001b[0msvhn_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msvhn_labels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.5/dist-packages/torch/utils/data/dataloader.py\u001b[0m in \u001b[0;36m__next__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    202\u001b[0m         \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    203\u001b[0m             \u001b[0;32massert\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshutdown\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbatches_outstanding\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 204\u001b[0;31m             \u001b[0midx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata_queue\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    205\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbatches_outstanding\u001b[0m \u001b[0;34m-=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    206\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0midx\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrcvd_idx\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/lib/python3.5/multiprocessing/queues.py\u001b[0m in \u001b[0;36mget\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    341\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    342\u001b[0m         \u001b[0;32mwith\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_rlock\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 343\u001b[0;31m             \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_reader\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv_bytes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    344\u001b[0m         \u001b[0;31m# unserialize the data after having released the lock\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    345\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mForkingPickler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mres\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/lib/python3.5/multiprocessing/connection.py\u001b[0m in \u001b[0;36mrecv_bytes\u001b[0;34m(self, maxlength)\u001b[0m\n\u001b[1;32m    214\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mmaxlength\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mmaxlength\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    215\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"negative maxlength\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 216\u001b[0;31m         \u001b[0mbuf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_recv_bytes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmaxlength\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    217\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mbuf\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    218\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_bad_message_length\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/lib/python3.5/multiprocessing/connection.py\u001b[0m in \u001b[0;36m_recv_bytes\u001b[0;34m(self, maxsize)\u001b[0m\n\u001b[1;32m    405\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    406\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_recv_bytes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmaxsize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 407\u001b[0;31m         \u001b[0mbuf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_recv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    408\u001b[0m         \u001b[0msize\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstruct\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munpack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"!i\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbuf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetvalue\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    409\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mmaxsize\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0msize\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mmaxsize\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/lib/python3.5/multiprocessing/connection.py\u001b[0m in \u001b[0;36m_recv\u001b[0;34m(self, size, read)\u001b[0m\n\u001b[1;32m    377\u001b[0m         \u001b[0mremaining\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msize\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    378\u001b[0m         \u001b[0;32mwhile\u001b[0m \u001b[0mremaining\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 379\u001b[0;31m             \u001b[0mchunk\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhandle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mremaining\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    380\u001b[0m             \u001b[0mn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchunk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    381\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mn\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "solver.train()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -605,7 +720,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
