--- a/semisupervised_gan.ipynb
+++ b/semisupervised_gan.ipynb
@@ -10,15 +10,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
     "import torch\n",
     "from torchvision import datasets, transforms\n",
     "from torch.utils.data import DataLoader, Dataset\n",
     "from torch.autograd import Variable\n",
     "import torch.nn as nn\n",
-    "import torch.nn.functional as F"
+    "import torch.nn.functional as F\n",
+    "import numpy as np"
    ]
   },
   {
@@ -38,7 +44,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class SvhnDataset(Dataset):\n",
@@ -89,7 +97,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_loader(image_size, batch_size):\n",
@@ -116,6 +126,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svhn_loader_train, _ = get_loader(image_size=32, batch_size=36)\n",
+    "image_iter = iter(svhn_loader_train)\n",
+    "images, _, _ = image_iter.next()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def view_images(images):\n",
+    "    assert(len(images) >= 36)\n",
+    "    fig, axes = plt.subplots(6, 6, sharex=True, sharey=True, figsize=(5,5))\n",
+    "    for idx, ax in enumerate(axes.flatten()):\n",
+    "        img = images[idx].numpy()\n",
+    "        img = img.transpose(1, 2, 0)\n",
+    "        img = ((img - img.min())*255 / (img.max() - img.min())).astype(np.uint8)\n",
+    "        ax.imshow(img, aspect='equal')\n",
+    "        ax.xaxis.set_visible(False)\n",
+    "        ax.yaxis.set_visible(False)\n",
+    "    plt.subplots_adjust(wspace=0, hspace=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "view_images(images)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -132,7 +185,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def deconv(c_in, c_out, k_size, stride=2, pad=1, bn=True):\n",
@@ -160,7 +215,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class _netG(nn.Module):\n",
@@ -217,7 +274,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class _netD(nn.Module):\n",
@@ -322,7 +381,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import torch\n",
@@ -553,7 +614,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "image_size = 32\n",
@@ -699,7 +762,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -720,7 +785,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
